<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WhozThis</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_welcome">WhozThis</string>
    <string name="first_name">First Name</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_out">Sign Out</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="title_activity_profile">Edit Profile</string>
    <string name="title_activity_contact">Select People</string>
    <string name="people_in_convo">People in the conversation</string>
    <string name="last_name">Last Name</string>
    <string name="save">Save</string>
    <string name="sign_up_heading">Sign up for WhozThis</string>
    <string name="sign_up_desc">Fill out the form below to get started.</string>
    <string name="title_activity_new_messages">New Message</string>
    <string name="add">Add</string>
    <string name="friends">Friends</string>
    <string name="blocked_users">Block Users</string>
    <string name="change">Change</string>
    <string name="title_activity_messaging">MessagingActivity</string>

</resources>
