<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yass8n.gather.SignUpActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:text="@string/sign_up_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center|top"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/dark_gray"
        />

    <TextView
        android:text="@string/sign_up_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:textSize="15sp"
        android:textColor="@color/dark_gray"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        >

        <com.makeramen.RoundedImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:scaleType="fitCenter"
            android:src="@drawable/white"
            android:clickable="true"
            app:riv_oval="true"
            android:layout_centerInParent="true"
            />


        <com.makeramen.RoundedImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/single_icon"
            android:scaleType="centerCrop"
            app:riv_oval="true"
            android:id="@+id/profile_pic"
            android:layout_centerInParent="true"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="20sp"
            android:alpha="0.8"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:hint="First name"
            android:ems="10"
            android:id="@+id/first_name"
            android:paddingTop="7dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:id="@+id/last_name"
            android:hint="Last name"
            android:ems="10"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/phone"
            android:inputType="phone"
            android:hint="@string/phone_number"
            android:ems="5"
            android:maxLength="11"
            android:layout_marginBottom="-7dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/password"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:ems="5"
            android:layout_marginBottom="-7dp"
            />
    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/app_green"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textSize="20sp"
        android:id="@+id/sign_up"
        android:textColor="@color/white" />

</LinearLayout>
